--- a/src/styles/_searchBox.scss
+++ b/src/styles/_searchBox.scss
@@ -2,9 +2,13 @@
 @import './mixins';
 
 .search-box {
+    @include themed() {
+        background-color: t("fourth-bg-color");
+        color: t("main-text-color");
+    }
     width: 227px;
     border: none;
-    background-color: $fourth-bg-color;
+    // background-color: $fourth-bg-color;
     box-shadow: rgba(149, 157, 165, 0.1) 0px 8px 24px;
 
     ul {
@@ -15,6 +19,9 @@
                 position: static !important;
                 height: 35px;
                 border-radius: 50%;
+                @include themed() {
+                    background-color: t("secondary-bg-color");
+                };
             }
             display: flex;
             align-items: center;
@@ -26,7 +33,7 @@
         }
 
         li:hover {
-            background-color: $secondary-bg-color;
+            filter: brightness(1.2);
         }
     }
 }
