--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -21,7 +21,14 @@ $bg-color-dark: rgb(27, 27, 27);
 $secondary-bg-color-dark: rgb(43, 43, 43);
 $third-bg-color-dark: rgb(0, 0, 0);
 $fourth-bg-color-dark: rgb(17, 17, 17);
+$fifth-bg-color-dark: rgb(65, 65, 65);
+
+$btn-color-dark: rgba(73, 127, 226, 0.815);
+$secondary-btn-color-dark: rgba(51, 201, 108, 0.815);
+$third-btn-color-dark: rgb(255, 133, 133);
 
 $main-text-color-dark: rgb(231, 231, 231);
 $secondary-text-color-dark: rgb(250, 82, 60);
 $third-text-color-dark: rgb(194, 194, 194);
+
+$border-color-dark: rgb(34, 34, 34);
