--- a/src/styles/_profilePop.scss
+++ b/src/styles/_profilePop.scss
@@ -2,9 +2,13 @@
 @import './mixins';
 
 .profile-box {
+    @include themed() {
+        background-color: t("fourth-bg-color");
+        color: t("main-text-color");
+    }
     width: 200px;
     border: none;
-    background-color: $fourth-bg-color;
+    // background-color: $fourth-bg-color;
     box-shadow: rgba(149, 157, 165, 0.1) 0px 8px 24px;
 
     ul {
@@ -35,7 +39,10 @@
                     padding: 2px;
                 }
 
-                svg {
+                svg, img {
+                    @include themed() {
+                        background-color: t("secondary-bg-color");
+                    };
                     height: 30px;
                 }
 
@@ -47,7 +54,7 @@
         }
 
         li:hover {
-            background-color: $secondary-bg-color;
+            filter: brightness(1.2);
         }
     }
 }
